--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year New Me Project -2 </title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./Assests/images/watch.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;0,800;1,400&display=swap" rel="stylesheet">
+    <title>New Year New Me Project -2 (Version -1)</title>
 </head>
 <body>
-                
+                <!-- banner section  -->
+                    <div class="banner">
+                        <div class="banner-content">
+                        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+                        <p class="common-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                        <button type="submit" class="banner-button">Contact Us</button>
+                        </div>
+                    </div>
+
+                   
 </body>
 </html>
