this is main section add

--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
                         </div>
                     </div>
 
-                   
+                    <!-- main section  -->
+                    <main>
+                        <!-- hero section  -->
+                        <div class="hero">
+                            <div class="left-hero">
+                                <img class="shapehero" src="./Assests/images/person.png" alt="person image">
+                                <div class="shape"></div>
+                            </div>
+                            <div class="right-hero">
+                                <h1 class="common-title">My failures of previous year</h1>
+                                <p class="common-description hero-decription">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                                <ul class="check">
+                                    <li><img src="./Assests/images/icons/check 1.png" alt="check image">Contrary to popular belief, is not simply.</li> 
+                                    <li><img src="./Assests/images/icons/check 1.png" alt="check image">Contrary to popular belief.</li> 
+                                    <li><img src="./Assests/images/icons/check 1.png" alt="check image">Contrary to popular , is not simply.</li> 
+                                    <li><img src="./Assests/images/icons/check 1.png" alt="check image">Contrary to popular belief, is not simply.</li> 
+                                    <li><img src="./Assests/images/icons/check 1.png" alt="check image">Contrary to popular simply.</li>       
+                                </ul>
+                            </div>
+                        </div>
+                    </main>
 </body>
 </html>
