--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
                             </div>
                         </section>
                     </main>
-                    
+                    <!-- footer section  -->
+                    <footer class="footer">
+                        <div class="footer-left">
+                            <h1 class="footer-title">Future</h1>
+                            <p class="footer-desctiption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                            <p class="email">Email : info@gmail.com</p>
+                            <p class="phone">Phone : 01500 00 00 00</p>
+                            <img src="./Assests/images/icons/fb.png" alt="fb">
+                            <img src="./Assests/images/icons/twitter.png" class="twit" alt="twitter">
+                            <img src="./Assests/images/icons/youtube.png" alt="youtube">
+                        </div>
+                        <div class="footer-right">
+                            <h2 class="right-title">Subscribe</h2>
+                            <input type="email" id="email" name="email" placeholder="Enter your email">
+                            <button type="submit" id="foot-btn">Subscribe</button>
+                        </div>
+                    </footer>
 </body>
 </html>
